[gd_scene load_steps=2 format=3 uid="uid://editor_settings_panel_001"]

[ext_resource type="Script" uid="uid://editor_settings_panel_script_001" path="res://Scripts/Editor/editor_settings_panel.gd" id="1"]

[node name="EditorSettingsPanel" type="PanelContainer"]
custom_minimum_size = Vector2(180, 0)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "EDITOR SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="NoteCountContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/NoteCountContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Notes:"

[node name="NoteCountLabel" type="Label" parent="VBox/NoteCountContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="SnapContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="SnapStepLabel" type="Label" parent="VBox/SnapContainer"]
layout_mode = 2
text = "Step: 1/16"

[node name="SnapStepOption" type="OptionButton" parent="VBox/SnapContainer"]
layout_mode = 2
selected = 3
item_count = 7
popup/item_0/text = "1/4"
popup/item_0/id = 0
popup/item_1/text = "1/8"
popup/item_1/id = 1
popup/item_2/text = "1/12"
popup/item_2/id = 2
popup/item_3/text = "1/16"
popup/item_3/id = 3
popup/item_4/text = "1/24"
popup/item_4/id = 4
popup/item_5/text = "1/32"
popup/item_5/id = 5
popup/item_6/text = "1/64"
popup/item_6/id = 6

[node name="ClapCheckbox" type="CheckBox" parent="VBox"]
layout_mode = 2
text = "Clap"

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="HyperspeedContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="HyperspeedLabel" type="Label" parent="VBox/HyperspeedContainer"]
layout_mode = 2
text = "Hyperspeed: x1.0"

[node name="HyperspeedSlider" type="HSlider" parent="VBox/HyperspeedContainer"]
layout_mode = 2
min_value = 0.5
max_value = 3.0
step = 0.1
value = 1.0

[node name="SpeedContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="VBox/SpeedContainer"]
layout_mode = 2
text = "Speed: x1.00"

[node name="SpeedSlider" type="HSlider" parent="VBox/SpeedContainer"]
layout_mode = 2
min_value = 0.05
max_value = 1.0
step = 0.05
value = 1.0

[node name="HighwayContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="HighwayLengthLabel" type="Label" parent="VBox/HighwayContainer"]
layout_mode = 2
text = "Highway Length: 100%"

[node name="HighwayLengthSlider" type="HSlider" parent="VBox/HighwayContainer"]
layout_mode = 2
min_value = 50.0
max_value = 200.0
step = 10.0
value = 100.0
